logs/covid_ingestion/ingest_to_dwh/2021-11-15T20:36:37.468684+00:00/1.log
[2021-11-15 20:36:42,715] {taskinstance.py:1035} INFO - Dependencies all met for <TaskInstance: covid_ingestion.ingest_to_dwh manual__2021-11-15T20:36:37.468684+00:00 [queued]>
[2021-11-15 20:36:42,727] {taskinstance.py:1035} INFO - Dependencies all met for <TaskInstance: covid_ingestion.ingest_to_dwh manual__2021-11-15T20:36:37.468684+00:00 [queued]>
[2021-11-15 20:36:42,727] {taskinstance.py:1241} INFO - 
--------------------------------------------------------------------------------
[2021-11-15 20:36:42,727] {taskinstance.py:1242} INFO - Starting attempt 1 of 1
[2021-11-15 20:36:42,727] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2021-11-15 20:36:42,743] {taskinstance.py:1262} INFO - Executing <Task(PostgresOperator): ingest_to_dwh> on 2021-11-15 20:36:37.468684+00:00
[2021-11-15 20:36:42,747] {standard_task_runner.py:52} INFO - Started process 2202 to run task
[2021-11-15 20:36:42,750] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'covid_ingestion', 'ingest_to_dwh', 'manual__2021-11-15T20:36:37.468684+00:00', '--job-id', '92', '--raw', '--subdir', 'DAGS_FOLDER/covid_ingestion.py', '--cfg-path', '/tmp/tmp_dknayqk', '--error-file', '/tmp/tmp8ud2cfkg']
[2021-11-15 20:36:42,750] {standard_task_runner.py:77} INFO - Job 92: Subtask ingest_to_dwh
[2021-11-15 20:36:42,784] {logging_mixin.py:109} INFO - Running <TaskInstance: covid_ingestion.ingest_to_dwh manual__2021-11-15T20:36:37.468684+00:00 [running]> on host e693d79b64a2
[2021-11-15 20:36:42,878] {taskinstance.py:1429} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=covid_ingestion
AIRFLOW_CTX_TASK_ID=ingest_to_dwh
AIRFLOW_CTX_EXECUTION_DATE=2021-11-15T20:36:37.468684+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2021-11-15T20:36:37.468684+00:00
[2021-11-15 20:36:42,888] {base.py:79} INFO - Using connection to: id: postgres_dwh. Host: postgres-dwh, Port: 5432, Schema: None, Login: ***, Password: ***, extra: {}
[2021-11-15 20:36:42,892] {dbapi.py:225} INFO - Running statement: INSERT INTO dim_canton VALUES
    (DEFAULT,
    'BE',
    DEFAULT);

INSERT INTO dim_deaths VALUES
    (DEFAULT,
    0.0,
    'BE',
    '2021-11-15'
    )

INSERT INTO dim_infections VALUES
    (DEFAULT,
    1.0,
    'BE',
    '2021-11-15'
    ), parameters: None
[2021-11-15 20:36:42,893] {taskinstance.py:1703} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1332, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1458, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1514, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "INSERT"
LINE 13: INSERT INTO dim_infections VALUES
         ^

[2021-11-15 20:36:42,907] {taskinstance.py:1280} INFO - Marking task as FAILED. dag_id=covid_ingestion, task_id=ingest_to_dwh, execution_date=20211115T203637, start_date=20211115T203642, end_date=20211115T203642
[2021-11-15 20:36:42,921] {standard_task_runner.py:91} ERROR - Failed to execute job 92 for task ingest_to_dwh
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 292, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1332, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1458, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1514, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "INSERT"
LINE 13: INSERT INTO dim_infections VALUES
         ^

[2021-11-15 20:36:42,961] {local_task_job.py:154} INFO - Task exited with return code 1
[2021-11-15 20:36:42,994] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
